# wisper_test

./: .gitignore  Dockerfile  main.py  pyproject.toml  s3_uploader.py  test.ipynb
